# juridoc

./: .gitignore  Makefile  README.md  gen.py  juridoc.py  juridoc.spec  requirements.txt  setup.cfg  setup.py
juridoc/: __init__.py  config.py  db.py  db_loader.py  note.py  repo.py  source.py  sources_index.py  split.py  utils.py
juridoc/gui/: __init__.py  __main__.py  index_widget.py  main.py  notes_widget.py  pdf_thumbnailer.py  source_widget.py  sources_widget.py  spinner.py  style_factory.py
juridoc/pyinstaller/: __init__.py
src/: cli.py  gui.py  juridoc.py
src/pyinstaller/hooks/: hook-odfo.py
