[metadata]
name = juridoc
version = 0.1.0
description = Juridoc document and source management app
author = Jean Parpaillon

[options]
packages = find:
install_requires =
    pyexcel
    pyexcel-ods3
    pyexcel-xlsx
    odfdo
    pypdf
    jinja2
    PySide6>=6.4
include_package_data = True
python_requires = >=3.7

[options.entry_points]
gui_scripts =
    juridoc-gui = juridoc.gui:main